--- a/style-blue.7
+++ b/style-blue.7
@@ -1,10 +1,15 @@
 .TH YED-STYLE-BLUE 7 "YED Plugin Manuals" "" "YED Plugin Manuals"
 .SH NAME
-styles/blue \-
+styles/blue \- A 16-color style called blue.
 .SH CONFIGURATION
+None
 .SH COMMANDS
+None
+.SH BUFFERS
+None
 .SH NOTES
-.P
+None
 .SH VERSION
 0.0.1
 .SH KEYWORDS
+style, color, theme
